# vega

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md
docs/: CMakeCXXCompilerId_8cpp.html  README_8md.html  age_8h.html  age_8h__dep__incl.map  age_8h__dep__incl.md5  age_8h__incl.map  age_8h__incl.md5  age_8h_source.html  age__string__manipulator_8h.html  age__string__manipulator_8h__dep__incl.map  age__string__manipulator_8h__dep__incl.md5  age__string__manipulator_8h__incl.map  age__string__manipulator_8h__incl.md5  age__string__manipulator_8h_source.html  annotated.html  application__entity__manipulator_8h.html  application__entity__manipulator_8h__dep__incl.map  application__entity__manipulator_8h__dep__incl.md5  application__entity__manipulator_8h__incl.map  application__entity__manipulator_8h__incl.md5  application__entity__manipulator_8h_source.html  attribute__tag__manipulator_8h.html  attribute__tag__manipulator_8h__dep__incl.map  attribute__tag__manipulator_8h__dep__incl.md5  attribute__tag__manipulator_8h__incl.map  attribute__tag__manipulator_8h__incl.md5  attribute__tag__manipulator_8h_source.html  classes.html  classvega_1_1Age-members.html  classvega_1_1Age.html  classvega_1_1Date-members.html  classvega_1_1Date.html  classvega_1_1DateTime-members.html  classvega_1_1DateTime.html  classvega_1_1DecimalString-members.html  classvega_1_1DecimalString.html  classvega_1_1Exception-members.html  classvega_1_1Exception.html  classvega_1_1Exception__coll__graph.dot  classvega_1_1Exception__coll__graph.map  (+1110 more)
examples/: ct_files_to_phantom.cpp  dicom_out.cpp  edit.cpp
src/: main.cpp
test/: VEGA_Dictionary.txt  age_test.h  anonymizer_test.h  date_test.h  date_time_test.h  dictionary.txt  json_test.h  math_test.h  multi_vr_test.h  pathname_test.h  randomizer_test.h  regex_string_test.h  string_test.h  tag_mask_test.h  (+10 more)
(+336 files in other folders)
